# arm-pl011-rs

./: Cargo.toml  LICENSE  README.json  README.md
.github/workflows/: ci.yml
examples/: async_api.rs  sync_api.rs
src/: lib.rs
