[package]
name = "arm-pl011-rs"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "PL011 UART driver"
keywords = ["arm", "pl011", "uart", "no-std", "embedded-hal", "async"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]
version = "0.1.0"
edition = "2021"

[dependencies]
tock-registers = "0.8"
embedded-io = "0.6"
embedded-io-async = "0.6"
spin_on = "0.1"
