[package]
name = "arm-pl011-rs"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "PL011 UART driver"
keywords = ["pl011", "no-std", "embedded-hal", "async"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]
repository = "https://gitee.com/zr233/arm-pl011-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
tock-registers = "0.8"
embedded-io = "0.6"
embedded-io-async = "0.6"
spin_on = "0.1"
